Revamp loading.html with new layout and styles

--- a/loading.html
+++ b/loading.html
@@ -1,20 +1,32 @@
-
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project sn25</title>
-    <link rel="stylesheet" href="style.css"
+<meta charset="UTF-8">
+<title>Loading Centered</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box1"> 
-    ->
-    <a href="passwork.html">
-<button>
-   click vô
-</button>
-</a>
-    </div>
+<div class="sky-stickers">
+    <div class="sticker balloon1">🎈</div>
+    <div class="sticker balloon2">🎈</div>
+    <div class="sticker wings1">🪽</div>
+    <div class="sticker wings2">🪽</div>
+</div>
+
+<div class="ground-stickers">
+    <div class="sticker party1">🎉</div>
+    <div class="sticker party2">🎉</div>
+    <div class="sticker gift">🎁</div>
+</div>
+<div class="loading-container">
+    <div class="loading-bar"></div>
+    <span class="loading-text">LOADING...</span>
+</div>
+
+<div class="center-box" style="display:none;">
+    <button id="enterBtn">Enter</button>
+</div>
+
+<script src="scriptxe.js"></script>
 </body>
 </html>
