--- a/newpagemain.html
+++ b/newpagemain.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>mainhub</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="stylemain.css">
 </head>
 <body>
     <button class="back-btn" onclick="goBack()">⬅️ Trở về</button>
@@ -33,6 +33,7 @@
         <button class="btn btn-red" onclick="window.location.href='newpage3.html'">12</button>
         <button class="btn btn-green" onclick="window.location.href='newpage4.html'">2010</button>
     </div>
-    <script src="script1.js"></script>
+    <script src="scriptmain.js"></script>
 </body>
+
 </html>
