--- a/newpagemain.html
+++ b/newpagemain.html
@@ -29,11 +29,12 @@
 <div class="star s7">⭐</div>
 <div class="star s8">⭐</div>
     <div class="buttons">
-        <button class="btn btn-blue" onclick="window.location.href='newpage2.html'">25</button>
-        <button class="btn btn-red" onclick="window.location.href='newpage3.html'">12</button>
-        <button class="btn btn-green" onclick="window.location.href='newpage4.html'">2010</button>
+        <button class="btn btn-blue" onclick="window.location.href='newpageloadingnoel.html'">25</button>
+        <button class="btn btn-red" onclick="window.location.href='newpageld25.html'">12</button>
+        <button class="btn btn-green" onclick="window.location.href='newpagesn.html'">2010</button>
     </div>
     <script src="scriptmain.js"></script>
 </body>
 
 </html>
+
