--- a/newpagemain.html
+++ b/newpagemain.html
@@ -29,7 +29,7 @@
 <div class="star s7">⭐</div>
 <div class="star s8">⭐</div>
     <div class="buttons">
-        <button class="btn btn-blue" onclick="window.location.href='newpageloadingnoel.html'">25</button>
+        <button class="btn btn-blue" onclick="window.location.href='loadingnoel.html'">25</button>
         <button class="btn btn-red" onclick="window.location.href='newpageld25.html'">12</button>
         <button class="btn btn-green" onclick="window.location.href='newpagesn.html'">2010</button>
     </div>
@@ -37,4 +37,5 @@
 </body>
 
 </html>
+
 
