--- a/newpagenoel.html
+++ b/newpagenoel.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>noel</title>
-    <link rel="stylesheet" href="style22.css">
+    <meta charset="UTF-8" />
+    <title>Snowflake to Text</title>
+    <link rel="stylesheet" href="stylenoel.css" />
 </head>
 <body>
-<button class="back-btn" onclick="goBack()">⬅️ Trở về</button>
-<div class="christmas-card">
-    <h1>🎄Noel zui zẻ🎄</h1>
-    <p>🎁Quà noel để ở mess á nhoa❄️✨</p>
+    <button id="backBtn">⟵ Trở về</button>
 
-    <div class="icons">
-        <span>🎁</span>
-        <span>🍪</span>
-        <span>☃️</span>
-        <span>🎅</span>
-        <span>✨</span>
-    </div>
-</div>
+    <canvas id="canvas"></canvas>
+    <canvas id="cansnow"></canvas>
+<canvas id="snowbg"></canvas>
+<canvas id="cansnow"></canvas>
 
-<div class="snow-container"></div>
-
-<div class="snowpile left"></div>
-<div class="snowpile right"></div>
-
-<script src="script2.js"></script>
+    <script src="scriptnoel.js"></script>
 </body>
 </html>
