--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Universe Animation</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
 
@@ -16,6 +16,7 @@
 
 <canvas id="canvas"></canvas>
 
-<script src="script3.js"></script>
+<script src="scripttraitim.js"></script>
 </body>
+
 </html>
