--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<button class="back-btn" onclick="window.location.href='newpage.html'">
+<button class="back-btn" onclick="window.location.href='newpagemain.html'">
     ⟵ Trở về
 </button>
 
@@ -20,3 +20,4 @@
 </body>
 
 </html>
+
