--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
-
-<button class="back-btn" onclick="window.location.href='newpagemain.html'">
-    ⟵ Trở về
-</button>
-
+ <button id="backBtn">⟵ Trở về</button>
 <div class="neon-text">25/12/2010</div>
 
 <canvas id="canvas"></canvas>
@@ -20,3 +16,4 @@
 </body>
 
 </html>
+
