Refactor newpagetraitim.html structure and classes

--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
- <button id="backBtn">⟵ Trở về</button>
+  <button id="backBtn" class="back-btn">⟵ Trở về</button>
+
+  <canvas id="bg"></canvas>
 <div class="neon-text">25/12/2010</div>
 
 <canvas id="canvas"></canvas>
@@ -16,4 +18,5 @@
 </body>
 
 </html>
+
 
