--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -1,22 +1,22 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Universe Animation</title>
-    <link rel="stylesheet" href="styletraitim.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Heart Universe Animation</title>
+  <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
-  <button id="backBtn" class="back-btn">⟵ Trở về</button>
 
-  <canvas id="bg"></canvas>
-<div class="neon-text">25/12/2010</div>
+  <!-- Nút trở lại -->
+  <button id="backBtn" class="back-btn">⟵ Trở lại</button>
 
-<canvas id="canvas"></canvas>
+  <!-- Chữ neon -->
+  <div class="neon-text">25/12/2010</div>
 
-<script src="scripttraitim.js"></script>
+  <!-- Canvas trái tim -->
+  <canvas id="canvas"></canvas>
+
+  <script src="scripttraitim.js"></script>
 </body>
-
 </html>
-
-
