--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heart Universe Animation</title>
-  <link rel="stylesheet" href="styletraitim.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heart Universe Animation</title>
+    <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
+<button id="backBtn" class="back-btn">⟵ Trở lại</button>
 
-  <!-- Nút trở lại -->
-  <button id="backBtn" class="back-btn">⟵ Trở lại</button>
+<div class="neon-text">25/12/2010</div>
 
-  <!-- Chữ neon -->
-  <div class="neon-text">25/12/2010</div>
+<canvas id="canvas"></canvas>
 
-  <!-- Canvas trái tim -->
-  <canvas id="canvas"></canvas>
-
-  <script src="scripttraitim.js"></script>
+<script src="scripttraitim.js"></script>
 </body>
 </html>
