--- a/newpagetraitim.html
+++ b/newpagetraitim.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styletraitim.css">
 </head>
 <body>
-<button id="backBtn" class="back-btn">⟵ Trở lại</button>
+
+<button class="back-btn" onclick="window.location.href='newpagemain.html'">
+    ⟵ Trở về
+</button>
 
 <div class="neon-text">25/12/2010</div>
 
@@ -16,3 +19,4 @@
 <script src="scripttraitim.js"></script>
 </body>
 </html>
+
