--- a/newpagesn.html
+++ b/newpagesn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>sn</title>
-    <link rel="stylesheet" href="style4.css">
+    <link rel="stylesheet" href="stylesn.css">
 </head>
 <body>
 <button class="back-btn" onclick="goBack()">⬅️ Trở về</button>
@@ -35,6 +35,7 @@
     <div class="balloon b5">🎈</div>
 </div>
 
-<script src="script4.js"></script>
+<script src="script4=sn.js"></script>
 </body>
+
 </html>
