--- a/newpagesn.html
+++ b/newpagesn.html
@@ -35,7 +35,8 @@
     <div class="balloon b5">🎈</div>
 </div>
 
-<script src="script4=sn.js"></script>
+<script src="scriptsn.js"></script>
 </body>
 
 </html>
+
