--- a/newpagesn.html
+++ b/newpagesn.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 <button class="back-btn" onclick="goBack()">⬅️ Trở về</button>
+<button class="next-top-btn" onclick="goNext()">🎀 Tiếp tục 🎀</button>
 <div class="card">
-    <h1>🎉Quà sinh nhật nừ🎉</h1>
-    <p>🔥🎁quà để ở bên mess á nhoa qua đó lấy ik🔥 </p>
+    <h1>🎉Quà sinh nhật, noel🎉</h1>
+    <p>🔥🎁 Quà để ở bên mess á nhoa xem hết rồi qua đó lấy nha (click nút tiếp tục ở trên đi có bất ngờ)🔥 </p>
 
     <div class="icons">
         <span>🎂</span>
@@ -34,9 +35,6 @@
     <div class="balloon b4">🎈</div>
     <div class="balloon b5">🎈</div>
 </div>
-
 <script src="scriptsn.js"></script>
 </body>
-
 </html>
-
