--- a/newpagemain.html
+++ b/newpagemain.html
@@ -8,8 +8,8 @@
 <body>
     <button class="back-btn" onclick="goBack()">⬅️ Trở về</button>
     <div class="card">
-        <h1>🎉háp pi bớt day  heo🎉</h1>
-        <p>💖25/12/2010 chúc có 1 ngày noel và 1 ngày sinh nhật vui vẻ nhoa💖(ấn bên dưới đi)
+        <h1>🎉háp pi bớt day Hưng heo🎉</h1>
+        <p>💖chúc Hưng có 1 ngày noel và 1 ngày sinh nhật vui vẻ nhoa💖(ấn bên dưới đi)
         </p>
     </div>
 <div class="heart h1">❤️</div>
@@ -37,6 +37,7 @@
 </body>
 
 </html>
+
 
 
 
