--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Trang Mở Đầu</title>
+<title>Thiệp chúc</title>
 <link rel="stylesheet" href="stylemodau.css">
 </head>
 <body>
@@ -22,3 +22,4 @@
 <script src="scriptmodau.js"></script>
 </body>
 </html>
+
